# pymef

./: .gitignore  .gitmodules  .travis.yml  LICENSE.txt  MANIFEST.in  meflib.c  meflib.h  mefrec.c  mefrec.h  pymef3.c  pymef3.h  pyproject.toml  readme.md  setup.py  test_pymef.py  test_pymef3.py
.ci/: build_linux_wheels.sh  build_macos_wheels.sh  build_windows_wheels.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test_publish.yml
docs/: Makefile  api.rst  conf.py  getting_started.rst  index.rst  installation.rst
docs/_build/doctrees/: api.doctree  environment.pickle  getting_started.doctree  index.doctree  installation.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  getting_started.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: getting_started.rst.txt
pymef/: __init__.py  file_functions.py  mef_constants.py  mef_session.py
pymef/mef_file/: meflib.c  meflib.h  mefrec.c  mefrec.h  pymef3_file.c  pymef3_file.h
pymef/meflib/: mefrec.c
pymef/tests/: test_pymef.py
tests/: pymef_test.py  test_pymef.py  unit_test35.py
utils/: parse_meflib_constants.py
